--- v0.3 development series ---

- More visual improvements.
- Added a keyboard navigation mode. Use tab to jump from the message list to the
individual messages in the conversation. Use the O key to open/close a given
message. Use tab/shift-tab to move to next/previous message in the conversation.
Use backspace to move back to the conversation view.
- Added an "icons-only" mode for the buttons in the conversation view. This
should make it easier for narrow screens to properly display the conversation
title. Added native buttons on Linux, Mac and Windows.
- Added a "back" button to easily switch back to the single message view that
was displayed before the conversation.
- Dropped large parts of the code, in order to simplify maintenance. plain/text
messages are now displayed using the standard Thunderbird display code. This
means they will use the default font, they will have standard <blockquote>s
around quotations instead of >s.
- Dropped support for "use HTML for viewing messages whenever possible". The
extension now follows the Thunderbird global policy: select View > Message Body
As > [whatever you want] to achieve the same effect.

GMail Conversation View 0.3beta2
--------------------------------

- Various bugfixes from Justin Hileman: Makefile fixes, monospaced text
wrapping...
- Visual refresh of the conversation view, many thanks to Justin Hileman.
- Fix the Makefile to be compatible with older versions of zip.
- Be compatible to some degree with options mail.correct_threading and
mail.strict_threading (the "open in new tab" feature won't work though).
- Add an option to display message snippets using a monospaced font.
- Fix issues with the options dialog size on Mac.
- Display proper icons in the "Customize palette" dialogs.
- There is now an indication for messages that are drafts.

GMail Conversation View 0.3beta1
--------------------------------
- Fix packaging bug. All development builds between 03/01 and 03/07 won't work.